--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,41 @@
         android:id="@+id/light_on"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="iblio service not found"
+        android:id="@+id/iblioservice_info"
+        android:layout_below="@+id/connection_info_text"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Neo bluetooth module not found"
+        android:id="@+id/neo_bluetooth_info"
+        android:layout_below="@+id/iblioservice_info"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Accelerometer info"
+        android:id="@+id/accelerometer_info"
+        android:layout_below="@+id/neo_bluetooth_info"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Beacon Distance info"
+        android:id="@+id/beacon_distance_info"
+        android:layout_below="@+id/accelerometer_info"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
